--- a/oppgave07.html
+++ b/oppgave07.html
@@ -14,7 +14,7 @@
         <h1>Oppgave 7</h1>
         <button id="btnBlaa">Blå</button>
         <button id="btnOransje">Oransje</button>
-
+        <!--Ikke klar-->
 
 
 
