--- a/oppgave06.html
+++ b/oppgave06.html
@@ -27,7 +27,7 @@
             } else if (dittSvar > 50) {
                 document.write("<h2>Tallet er stort</h2>");
             } else {
-                document.write("<h2>Tallet er akkurat midth på</h2>")
+                document.write("<h2>Tallet er akkurat midt på</h2>")
             }
         </script>
     </body>
