lagt til oppgave 10

--- a/oppgave08.html
+++ b/oppgave08.html
@@ -11,7 +11,7 @@
     <body>
         <nav id="menu"></nav>
 
-        <h1>Oppgave 8 - PIMM #1</h1>
+        <h1>Oppgave 8 - PRIMM #1</h1>
         
         <p>Oppgaven er som følger:</p>
         <p>Lage et program i Scrimba som regner ut om elever på videregående skole har for mange timer fravær i et fag, altså om de er over eller under fraværsgrensa. Fraværsgrensa er på 10%. Koden skal starte med variablene timetall (antall timer i faget, feks 140) og fravaer (antall timer eleven har vært borte), og gi en melding til brukeren om eleven er over eller under fraværsgrensa. </p>
