Endringer på css og innhold

--- a/oppgave07.html
+++ b/oppgave07.html
@@ -9,13 +9,22 @@
         <link rel="stylesheet" href="./index.css">
     </head>
     <body>
-        <nav id="menu"></nav>
+        <header>
+            <nav id="menu"></nav>
+        </header>
 
-        <h1>Oppgave 7</h1>
-        <div id="knapper">
-            <button id="btnBlaa">Blå</button>
-            <button id="btnOransje">Oransje</button>
-        </div>
+        <main>
+            <h1>Oppgave 7</h1>
+
+            <div id="knapper">
+                <button id="btnBlaa">Blå</button>
+                <button id="btnOransje">Oransje</button>
+            </div>
+        </main>
+    
+        <footer>
+            <p>Catharina B. Sørum - Frontend Utvikling 2019 - Fagskolen Kristiania</p>
+        </footer>
 
 
 
