--- a/index.html
+++ b/index.html
@@ -9,10 +9,17 @@
         <link rel="stylesheet" href="./index.css">
     </head>
     <body>
-        <nav id="menu"></nav>
-
-        <h1>Oppgavesett 4</h1>
+        <header>
+            <nav id="menu"></nav>
+        </header>
         
+        <main id="oppgavesett">
+            <h1>Oppgavesett 4</h1>
+        </main>
+
+        <footer>
+            <p>Catharina B. Sørum - Frontend Utvikling 2019 - Fagskolen Kristiania</p>
+        </footer>
 
         <script src="./menu.js"></script>
     </body>
