--- a/oppgave01.html
+++ b/oppgave01.html
@@ -9,11 +9,17 @@
         <link rel="stylesheet" href="./index.css">
     </head>
     <body>
-        <nav id="menu"></nav>
+        <header>
+                <nav id="menu"></nav>
+        </header>
 
-        <h1>Oppgave 1 - 7 gangen</h1>
-
-
+        <main>
+            <h1>Oppgave 1 - 7 gangen</h1>
+        </main>
+    
+        <footer>
+            <p>Catharina B. Sørum - Frontend Utvikling 2019 - Fagskolen Kristiania</p>
+        </footer>
 
         <script src="./menu.js"></script>
         <script>
