--- a/oppgave03.html
+++ b/oppgave03.html
@@ -9,12 +9,20 @@
         <link rel="stylesheet" href="./index.css">
     </head>
     <body>
-        <nav id="menu"></nav>
+        <header>
+            <nav id="menu"></nav>
+        </header>
 
-        <h1>Oppgave 3</h1>
+        <main>
+            <h1>Oppgave 3</h1>
 
-        <ol id="hesteliste"></ol>
-
+            <ol id="hesteliste"></ol>
+        </main>
+    
+        <footer>
+            <p>Catharina B. Sørum - Frontend Utvikling 2019 - Fagskolen Kristiania</p>
+        </footer>
+    
 
         <script src="./menu.js"></script>
         <script>
